# CoinGame

./: README.md  pyproject.toml
src/coin_collector/: __main__.py  config.py  game.py
src/coin_collector/levels/: erstes_level.jason  final_boss.json  level_02_parkour.json  level_03_zigzag.json  level_exampel.jason  maze_level.json  test_config.py
