[project]
name = "coin-collector"
version = "0.1.0"
description = "Ein einfaches 2D-Sammelspiel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.2",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"